--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -148,7 +148,7 @@ img {
   margin: 0 auto;
   max-width: 739px;
   padding: 5px;
-  margin: 10px 0 10px 0;
+  margin: 0px;
   border: 1px solid #ebebeb;
 
   box-shadow: 0 0 5px #ebebeb;
@@ -258,7 +258,7 @@ form {
 }
 
 img {
-  width: 100%;
+  /*width: 100%;*/
   max-width: 100%;
 }
 
