--- a/src/slenderbox.css
+++ b/src/slenderbox.css
@@ -4,11 +4,11 @@
     width: 100%;
     top: 0;
     left: 0;
-	opacity: 0;
-	z-index: 9999;
-	overflow: hidden;
-	-webkit-transition: opacity .3s ease-in-out;
-	transition: opacity .3s ease-in-out;
+    opacity: 0;
+    z-index: 9999;
+    overflow: hidden;
+    -webkit-transition: opacity .3s ease-in-out;
+    transition: opacity .3s ease-in-out;
 }
 
 #sboxOverlay {
@@ -44,8 +44,7 @@
     width: 30px;
     top: 145px;
     left: 145px;
-    /* loading.svg */
-    background-image: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%2230%22%20width%3D%2230%22%3E%3Crect%20height%3D%2215%22%20width%3D%2215%22%20fill%3D%22%23bbb%22%3E%3CanimateMotion%20dur%3D%221.5s%22%20repeatCount%3D%22indefinite%22%20path%3D%22M%200%200%20L%2015%200%20L%2015%2015%20L%200%2015%20L%200%200%22%2F%3E%3C%2Frect%3E%3C%2Fsvg%3E');
+    -webkit-backface-visibility: hidden; /* Fix ghosting problem in WebKit */
 }
 
 #sboxImg {
@@ -121,4 +120,35 @@
     -ms-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     transform: scaleX(-1);
+}
+
+#sboxLoading {
+    height:15px;
+    width:15px;
+    background-color:#bbb;
+    position:relative;
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s;
+    -webkit-animation-name: sboxKey;
+    animation-name: sboxKey;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+}
+
+@-webkit-keyframes sboxKey {
+    from {left:0;top:0;}
+    25% {left:15px;top:0;}
+    50% {left:15px;top:15px;}
+    75% {left:0;top:15px;}
+    to {left:0;top:0;}
+}
+
+@keyframes sboxKey {
+    from {left:0;top:0;}
+    25% {left:15px;top:0;}
+    50% {left:15px;top:15px;}
+    75% {left:0;top:15px;}
+    to {left:0;top:0;}
 }
